<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity">


    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="271dp"
        android:layout_marginEnd="181dp"
        android:text="@string/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="28dp"
        android:layout_marginEnd="194dp"
        android:text="@string/huh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="271dp"
        android:layout_marginEnd="5dp"
        android:text="@string/welcome"
        app:layout_constraintEnd_toStartOf="@+id/user"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="Balance :"
        app:layout_constraintEnd_toStartOf="@+id/balance"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/bt_jeux"
        android:layout_width="162dp"
        android:layout_height="61dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/acc_der_aux_jeux"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balance" />

    <Button
        android:id="@+id/bt_banque"
        android:layout_width="162dp"
        android:layout_height="61dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:text="@string/guichet_de_banque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_jeux" />


</androidx.constraintlayout.widget.ConstraintLayout>